Fix layout issue on the work projects

--- a/css/styles.css
+++ b/css/styles.css
@@ -321,11 +321,6 @@ footer {
     text-align: center;
   }
 
-  .project-image-container > img {
-    max-width: 40%;
-    float: left;
-  }
-
 
 
 
